plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

allprojects {
    group = 'blizzard.development'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
        mavenLocal()

        maven { url 'https://jitpack.io' }
        maven {
            name = "papermc-repo"
            url = "https://repo.papermc.io/repository/maven-public/"
        }
        maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/groups/public/"
        }

        maven { url "https://repo.dmulloy2.net/repository/public/" }
        maven { url = "https://repo.aikar.co/content/groups/aikar/" }
        maven { url = "https://hub.spigotmc.org/nexus/content/groups/public/" }
        maven { url = 'https://repo.infernalsuite.com/repository/maven-snapshots/' }
        maven { url = 'https://repo.rapture.pw/repository/maven-releases/' }
        maven {
            url = 'https://maven.enginehub.org/repo/'
        }
        maven {
            url 'https://libraries.minecraft.net'
        }
        maven {
            url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
        }
        maven { url = uri("https://repo.papermc.io/repository/maven-public/") }
        maven {
            url "https://plugins.gradle.org/m2/"
        }
        maven {
            url = uri('https://repo.nickuc.com/maven-releases/')
        }
    }
}


subprojects {

    apply plugin: "java"
    apply plugin: "com.github.johnrengelman.shadow"

    dependencies {
        implementation "co.aikar:acf-paper:0.5.1-SNAPSHOT"
        implementation 'com.zaxxer:HikariCP:5.0.0'
        implementation 'com.github.stefvanschie.inventoryframework:IF:0.10.14'
    }

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(17))
    }

}